Fixed some small layout issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,6 +41,10 @@ body {
   }
 }
 
+.header__txt {
+  padding: 0 50px 0 0;
+}
+
 main {
   width: 100%;
   height: 100%;
@@ -69,12 +73,12 @@ main {
   cursor: grab;
 }
 
-.thumbnail_text {
+.thumbnail_txt {
   font-size: 17px;
   text-align: center;
   margin: 0;
 }
-.thumbnail_text:hover {
+.thumbnail_txt:hover {
   font-weight: bold;
   color: #317afb;
   cursor: grab;
