--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@ body {
 
 header {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   padding: 10px 0 10px 0;
   border-bottom: 1px solid #1a1a1a;
   margin: 0 30px 10px 30px;
